--- a/3 - Hoisting/index.html
+++ b/3 - Hoisting/index.html
@@ -27,7 +27,7 @@
     console.log("My cat's name is " + name);
 }
 
-dogName("Tigger");</code>
+catName("Tigger");</code>
                 <br />
                 <br />
                 And this one?
