--- a/6 - Arrow Functions/index.html
+++ b/6 - Arrow Functions/index.html
@@ -28,7 +28,7 @@ countries.map((country) => {
     return country.length;
 });             
 // es6 with reduced sintax on arrow function 
-countries.map(country) => country.length);             
+countries.map(country => country.length);             
 </code>
                 <br />
                 <br />
